--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+}
+.App h1{
+  font-family: Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
+  color: white;
+  -webkit-text-stroke-width: 1.2px;
+  -webkit-text-stroke-color: black;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 3em;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  height: 100px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px 1px #828282;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +34,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
