--- a/src/App.css
+++ b/src/App.css
@@ -12,25 +12,40 @@
   font-size: 3em;
 }
 
-.App-logo {
-  height: 100px;
-  border-radius: 10px;
-  box-shadow: 3px 3px 5px 1px #828282;
+.resetBtn, .startBtn{
+  background-image: url('/public/assets/images/red-btn-img.jpeg');
+  border: none;
+  background-repeat:no-repeat;
+  background-size: cover;
+  width: 110px;
+  height: 60px;
+  cursor: pointer;
+  padding: 0;
+  border-radius: 30px;
+  font-weight: bold;
+  font-family: "Kode Mono", monospace;
+  font-size: large;
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(255, 0, 0);
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
 }
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.resetBtn:hover, .startBtn:hover{
+  color: yellow;
+}
+.difficultyParent{
+  /* min-height: 140px; */
+  background-color: rgb(149, 149, 149);
+  padding: 20px 10px;
+  border-radius: 20px;
+  display: inline-block;
+  margin: 10px auto;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 500px;
+  align-self: center;
+  float: none;
 }
-
-.App-link {
-  color: #61dafb;
+.resetBtn{
+  display: none;
 }
-
