--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
 .App h1{
   font-family: Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
   color: white;
-  -webkit-text-stroke-width: 1.2px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(140, 140, 140);
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 3em;
@@ -36,8 +36,8 @@
 .difficultyParent{
   /* min-height: 140px; */
   background-color: rgb(149, 149, 149);
-  padding: 20px 10px;
-  border-radius: 20px;
+  padding: 20px;
+  border-radius: 50px;
   display: inline-block;
   margin: 10px auto;
   align-items: center;
@@ -48,4 +48,19 @@
 }
 .resetBtn{
   display: none;
+}
+footer{
+  text-align: center;
+  background-color: rgb(149, 149, 149);
+  max-width: 100%;
+  padding: 20px;
+  border-top: 3px solid rgb(132, 132, 132);
+  border-radius: 4px;
+}
+.App p{
+  font-family: "Impact", monospace;
+  /* font-size: 1.5em;
+  color: white;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black; */
 }
