--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(255, 248, 175);
+  background-color: rgb(18, 18, 18);
+  color: whitesmoke;
 }
 
 code {
